# Animation

./: CMakeLists.txt  CMakeUserPresets.json  README.md  game.cpp  game.h  game_object.cpp  game_object.h  main.cpp  map.cpp  map.h  texture_manager.cpp  texture_manager.h  vcpkg.json
animations/: animation.cpp  animation.h  cube_animation.cpp  cube_animation.h  lightning_animation.cpp  lightning_animation.h  road_animation.cpp  road_animation.h  sin_animation.cpp  sin_animation.h  spiral_animation.cpp  spiral_animation.h
